fix alignment

--- a/src/zip-manager/components/styles/NavigationBar.css
+++ b/src/zip-manager/components/styles/NavigationBar.css
@@ -73,7 +73,7 @@
 }
 
 @media (max-width: 40ch) {
-  .navigation-bar {
+  .navigation-bar > * {
     font-size: .7em;
   }
 }
